--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,10 @@ services:
   ports:
       - "8080:8080"
       - "50000:50000"
-      - "1915:1915"
+      - "1915"
   volumes:
    - ./var/jenkins_home:/var/jenkins_home
+   - ./var/jenkins_home/workspace:/var/jenkins_home/workspace
    - /var/run/docker.sock:/var/run/docker.sock 
    - /usr/local/bin/docker:/usr/bin/docker
   hostname: ci
