--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 ### 網頁伺服器的container ##################################
  ci:
   #build: .
-  image: deviny/jenkins-php
+  image: deviny/jenkins-php:7.2.6
   dns: 8.8.8.8
   ports:
       - "8080:8080"
